몸무게, 사료조회 개선